modules/aws/vpc-environment/aws_vpc.tf
# VIRTUAL PRIVATE CLOUD
resource "aws_vpc" "main" {
  cidr_block           = "${var.vpc_cidr}"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags {
    Name        = "${terraform.workspace}"
    Environment = "${terraform.workspace}"
    Stack       = "environment"
  }
}
